adding data of verses

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run generate-manifest && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate-manifest": "node scripts/generateAudioManifest.js"
+    "generate-manifest": "node scripts/generateAudioManifest.js",
+    "generate-verses": "node scripts/generateVersesData.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
